@@ -2,14 +2,12 @@ package dtool.ast.references;
 
 import java.util.Collection;
 
-import descent.core.ddoc.Ddoc;
 import dtool.ast.ASTCodePrinter;
 import dtool.ast.ASTNodeTypes;
 import dtool.ast.IASTVisitor;
 import dtool.ast.definitions.INamedElement;
-import dtool.ast.definitions.IntrinsicDefUnit;
 import dtool.ast.expressions.Resolvable;
-import dtool.resolver.CommonDefUnitSearch;
+import dtool.resolver.LanguageIntrinsics;
 import dtool.resolver.api.IModuleResolver;
 
 public class RefTypeDynArray extends CommonRefNative {
@@ -37,27 +35,7 @@ public class RefTypeDynArray extends CommonRefNative {
 	
 	@Override
 	public Collection<INamedElement> findTargetDefElements(IModuleResolver moduleResolver, boolean findFirstOnly) {
-		return Resolvable.wrapResult(IntrinsicDynArray.instance);
-	}
-	
-	
-	public static class IntrinsicDynArray extends IntrinsicDefUnit {
-		public IntrinsicDynArray() {
-			super("<dynamic-array>");
-		}
-		
-		public static final IntrinsicDynArray instance = new IntrinsicDynArray();
-		
-		@Override
-		public Ddoc resolveDDoc() {
-			return null; // TODO
-		}
-		
-		@Override
-		public void resolveSearchInMembersScope(CommonDefUnitSearch search) {
-			// TODO
-		}
-		
+		return Resolvable.wrapResult(LanguageIntrinsics.d_2_063_intrinsics.dynArrayType);
 	}
 	
 }
