@@ -23,4 +23,4 @@ auto _dummy =
 #PROJECT(rawProject)
 int.init.#REFSEARCH¤【#@INTEGRAL_PROPERTIES】;
 float.init.#REFSEARCH¤【#@FLOAT_PROPERTIES】;
-float.stringof.#REFSEARCH¤【#@TYPE_PROPERTIES】; //TODO array properties
+float.stringof.#REFSEARCH¤【#@ARRAY_PROPERTIES】;
