@@ -1,0 +1,6 @@
+▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+int[123] arrayS;
+int[] arrayD;
+
+arrayS.#REFSEARCH¤【#@ARRAY_PROPERTIES】;
+arrayD.#REFSEARCH¤【#@ARRAY_PROPERTIES】;
